# conflow

./: .editorconfig  .gitlab-ci.yml  .guix-channel  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FUNDING.yml  GOVERNANCE.md  LICENSE.txt  MAINTAINERS.md  README.adoc  RSR_COMPLIANCE.adoc  SECURITY.md  STATE.scm  codemeta.json  guix.scm
.github/workflows/: codeql.yml
.well-known/: ai.txt  dc.xml  dnt-policy.txt  humans.txt  security.txt
docs/: CITATIONS.adoc
src/: lib.rs  main.rs
src/analyzer/: complexity.rs  config_detector.rs  mod.rs  patterns.rs  recommender.rs
src/cache/: filesystem.rs  hash.rs  mod.rs
src/cli/: analyze.rs  cache.rs  graph.rs  init.rs  mod.rs  rsr.rs  run.rs  validate.rs  watch.rs
src/errors/: educational.rs  mod.rs  recovery.rs
src/executors/: cue.rs  mod.rs  nickel.rs  shell.rs
src/pipeline/: dag.rs  definition.rs  executor.rs  mod.rs  validation.rs
src/rsr/: badges.rs  compliance.rs  config.rs  diff.rs  hooks.rs  mod.rs  remediation.rs  requirements.rs  schemas.rs  templates.rs
src/utils/: colors.rs  mod.rs  spinner.rs
