[package]
name = "conflow"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell"]
license = "MIT OR Apache-2.0"
description = "Configuration flow orchestrator for CUE, Nickel, and config validation workflows"
repository = "https://gitlab.com/rhodium-standard/conflow"
readme = "README.md"
keywords = ["configuration", "cue", "nickel", "validation", "pipeline"]
categories = ["command-line-utilities", "config", "development-tools"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
colored = "2.1"
indicatif = "0.17"
console = "0.15"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Graph algorithms
petgraph = "0.6"

# Hashing
blake3 = "1.5"

# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
miette = { version = "7.2", features = ["fancy"] }

# Finding executables
which = "6.0"

# Glob patterns
glob = "0.3"

# Regex
regex = "1.10"

# Path handling
directories = "5.0"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.9"
assert_cmd = "2.0"
predicates = "3.0"
insta = { version = "1.34", features = ["yaml"] }
tokio-test = "0.4"

[[bin]]
name = "conflow"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
